Seperate .cpp and .h file for classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(TINY_RENDERER)
 
 include_directories(dependencies)
 add_executable(TinyRenderer src/main.cpp
-                            dependencies/stb/stb_image.cpp)
+                            src/frame.cpp
+                            src/model.cpp
+                            src/renderer.cpp
+                            src/texture.cpp
+                            dependencies/stb/stb_image.cpp
+                            dependencies/stb/stb_image_write.cpp
+                            dependencies/tiny_obj_loader/tiny_obj_loader.cpp)
